fix(grid): simplify color usage

--- a/packages/bootstrap/scss/grid/_variables.scss
+++ b/packages/bootstrap/scss/grid/_variables.scss
@@ -128,6 +128,7 @@ $kendo-grid-cell-vertical-border-width: $kendo-table-cell-vertical-border-width 
 
 $kendo-grid-cell-placeholder-line-width: 80% !default;
 
+
 /// Background color of the grid component
 /// @group grid
 $kendo-grid-bg: $kendo-table-bg !default;
@@ -137,6 +138,7 @@ $kendo-grid-text: $kendo-table-text !default;
 /// Border color of the grid component
 /// @group grid
 $kendo-grid-border: $kendo-table-border !default;
+
 
 /// Background color of grid header
 /// @group grid
@@ -151,6 +153,7 @@ $kendo-grid-header-border: $kendo-table-header-border !default;
 /// @group grid
 $kendo-grid-header-gradient: $kendo-table-header-gradient !default;
 
+
 /// Background color of grid footer
 /// @group grid
 $kendo-grid-footer-bg: $kendo-table-footer-bg !default;
@@ -160,6 +163,7 @@ $kendo-grid-footer-text: $kendo-table-footer-text !default;
 /// Border color of grid footer
 /// @group grid
 $kendo-grid-footer-border: $kendo-table-footer-border !default;
+
 
 /// Background color of alternating rows in grid
 /// @group grid
@@ -171,6 +175,7 @@ $kendo-grid-alt-text: $kendo-table-alt-row-text !default;
 /// @group grid
 $kendo-grid-alt-border: $kendo-table-alt-row-border !default;
 
+
 /// Background color of hovered rows in grid
 /// @group grid
 $kendo-grid-hover-bg: $kendo-table-hover-bg !default;
@@ -181,6 +186,21 @@ $kendo-grid-hover-text: $kendo-table-hover-text !default;
 /// @group grid
 $kendo-grid-hover-border: $kendo-table-hover-border !default;
 
+
+/// Background color of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-bg: $kendo-table-focus-bg !default;
+/// Text color of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-text: $kendo-table-focus-text !default;
+/// Border color of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-border: $kendo-table-focus-border !default;
+/// Box shadow of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-shadow: $kendo-table-focus-shadow !default;
+
+
 /// Background color of selected rows in grid
 /// @group grid
 $kendo-grid-selected-bg: $kendo-table-selected-bg !default;
@@ -190,6 +210,29 @@ $kendo-grid-selected-text: $kendo-table-selected-text !default;
 /// Border color of selected rows in grid
 /// @group grid
 $kendo-grid-selected-border: $kendo-table-selected-border !default;
+
+
+/// Background color of selected alternating rows in grid.
+/// @group grid
+$kendo-grid-alt-selected-bg: k-try-shade( $kendo-grid-selected-bg, .5 ) !default;
+/// Text color of selected alternating rows in grid.
+/// @group grid
+$kendo-grid-alt-selected-text: $kendo-grid-selected-text !default;
+/// Border color of selected alternating rows in grid.
+/// @group grid
+$kendo-grid-alt-selected-border: $kendo-grid-selected-border !default;
+
+
+/// Background color of hovered and selected rows in grid
+/// @group grid
+$kendo-grid-selected-hover-bg: k-try-shade( $kendo-grid-selected-bg, 1 ) !default;
+/// Text color of hovered and selected rows in grid
+/// @group grid
+$kendo-grid-selected-hover-text: $kendo-grid-selected-text !default;
+/// Border color of hovered and selected rows in grid
+/// @group grid
+$kendo-grid-selected-hover-border: $kendo-grid-selected-border !default;
+
 
 $kendo-grid-grouping-row-bg: k-try-shade( $kendo-grid-bg ) !default;
 $kendo-grid-grouping-row-text: $kendo-grid-text !default;
@@ -202,8 +245,6 @@ $kendo-grid-sorting-index-spacing-y: 2px !default;
 $kendo-grid-sorting-index-spacing-x: -$kendo-grid-sorting-index-spacing-y !default;
 
 $kendo-grid-sorted-icon-spacing: calc( #{$kendo-padding-md-x} - 1px ) !default;
-
-$kendo-grid-focus-shadow: $kendo-table-focus-shadow !default;
 
 $kendo-grid-command-cell-button-spacing: k-map-get( $kendo-spacing, 2 ) !default;
 // be cautious when changing the next line; see https://github.com/MoOx/reduce-css-calc/issues/38
