--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -777,7 +777,7 @@
 
     kendo-grid {
         .k-table-row.k-grid-row-sticky {
-            border: 0;
+            border-width: 0;
             position: static;
             z-index: auto;
         }
