--- a/packages/material/scss/grid/_theme.scss
+++ b/packages/material/scss/grid/_theme.scss
@@ -4,73 +4,21 @@
     $kendo-grid-filter-button-focus: rgba( black, .12 ) !default;
 
     .k-grid {
+        // Inherited from default theme
 
-        // Selected state
-        .k-table-td.k-selected,
-        .k-table-row.k-selected {
-            color: $kendo-grid-selected-text;
-            background-color: $kendo-grid-selected-bg;
+
+        // Alt row
+        .k-table-alt-row {
+            // Inherited from default theme
         }
 
-        .k-table-row.k-selected > td,
-        .k-table-row.k-selected > .k-table-td {
-            color: inherit;
-            background-color: transparent;
+
+        // Hover state
+        .k-table-row {
+            // Inherited from default theme
         }
 
         // Hover, Focused state
-        .k-table {
-            > .k-table-row:not(.k-detail-row):hover,
-            > .k-table-row:not(.k-detail-row).k-hover,
-            td:focus,
-            td.k-focus,
-            .k-table-td:focus,
-            .k-table-td.k-focus,
-            .k-table-th:focus,
-            .k-table-th.k-focus,
-            .k-master-row > td:focus,
-            .k-grouping-row > td:focus,
-            .k-detail-row > td:focus,
-            .k-group-footer > td:focus,
-            .k-master-row > .k-table-td:focus,
-            .k-grouping-row > .k-table-td:focus,
-            .k-detail-row > .k-table-td:focus,
-            .k-group-footer > .k-table-td:focus {
-                color: inherit;
-                background-color: $kendo-grid-hover-bg;
-            }
-
-            .k-table-row:hover,
-            .k-table-row.k-hover {
-                .k-grid-header-sticky,
-                .k-grid-footer-sticky {
-                    color: inherit;
-                    background-color: $kendo-grid-sticky-hover-bg;
-                }
-            }
-
-            .k-table-th,
-            td,
-            .k-table-td,
-            .k-master-row > td,
-            .k-grouping-row > td,
-            .k-detail-row > td,
-            .k-group-footer > td,
-            .k-master-row > .k-table-td,
-            .k-grouping-row > .k-table-td,
-            .k-detail-row > .k-table-td,
-            .k-group-footer > .k-table-td {
-                &:focus,
-                &.k-focus {
-                    &.k-grid-header-sticky,
-                    &.k-grid-content-sticky,
-                    &.k-grid-footer-sticky {
-                        color: inherit;
-                        background-color: $kendo-grid-sticky-hover-bg;
-                    }
-                }
-            }
-        }
 
         .k-grid-pager:focus,
         .k-grid-pager.k-focus {
@@ -81,49 +29,6 @@
         td,
         .k-table-td {
             border-inline-start-color: transparent;
-        }
-
-        .k-grid-header-locked,
-        .k-grid-content-locked,
-        .k-grid-header-locked .k-table-th,
-        .k-grid-content-locked td,
-        .k-grid-content-locked .k-table-td {
-            border-top-color: $kendo-grid-header-border;
-            border-bottom-color: $kendo-grid-header-border;
-
-            .k-group-footer {
-                &:hover td,
-                &.k-hover td,
-                &:hover .k-table-td,
-                &.k-hover .k-table-td {
-                    color: inherit;
-                    @include fill( $bg: $kendo-grid-sticky-footer-hover-bg );
-                }
-            }
-        }
-
-        .k-master-row {
-            .k-grid-content-sticky {
-                border-color: $kendo-grid-sticky-border;
-                border-bottom-color: $kendo-grid-header-border;
-            }
-            .k-grid-row-sticky {
-                border-top-color: $kendo-grid-sticky-border;
-                border-bottom-color: $kendo-grid-sticky-border;
-            }
-        }
-    }
-
-    kendo-grid {
-        .k-grid-content-sticky {
-            border-color: $kendo-grid-sticky-border;
-            border-bottom-color: $kendo-grid-header-border;
-        }
-
-        .k-grid-row-sticky td,
-        .k-grid-row-sticky .k-table-td {
-            border-top-color: $kendo-grid-sticky-border;
-            border-bottom-color: $kendo-grid-sticky-border;
         }
     }
 
@@ -173,21 +78,6 @@
             border-inline-color: $kendo-grid-sticky-header-border;
         }
 
-    }
-
-    .k-group-footer {
-        td,
-        .k-table-td,
-        .k-grid-footer-sticky {
-            background: $kendo-grid-sticky-footer-bg;
-        }
-
-        &:hover td,
-        &.k-hover td,
-        &:hover .k-table-td,
-        &.k-hover .k-table-td {
-            @include fill( $bg: $kendo-grid-sticky-footer-hover-bg );
-        }
     }
 
     .k-grouping-dropclue,
