--- a/packages/classic/scss/grid/_variables.scss
+++ b/packages/classic/scss/grid/_variables.scss
@@ -135,6 +135,7 @@ $kendo-grid-cell-vertical-border-width: $kendo-table-cell-vertical-border-width 
 
 $kendo-grid-cell-placeholder-line-width: 80% !default;
 
+
 /// Background color of the grid component
 /// @group grid
 $kendo-grid-bg: $kendo-table-bg !default;
@@ -144,6 +145,7 @@ $kendo-grid-text: $kendo-table-text !default;
 /// Border color of the grid component
 /// @group grid
 $kendo-grid-border: $kendo-table-border !default;
+
 
 /// Background color of grid header
 /// @group grid
@@ -158,6 +160,7 @@ $kendo-grid-header-border: $kendo-table-header-border !default;
 /// @group grid
 $kendo-grid-header-gradient: $kendo-table-header-gradient !default;
 
+
 /// Background color of grid footer
 /// @group grid
 $kendo-grid-footer-bg: $kendo-table-footer-bg !default;
@@ -167,6 +170,7 @@ $kendo-grid-footer-text: $kendo-table-footer-text !default;
 /// Border color of grid footer
 /// @group grid
 $kendo-grid-footer-border: $kendo-table-footer-border !default;
+
 
 /// Background color of alternating rows in grid
 /// @group grid
@@ -178,6 +182,7 @@ $kendo-grid-alt-text: $kendo-table-alt-row-text !default;
 /// @group grid
 $kendo-grid-alt-border: $kendo-table-alt-row-border !default;
 
+
 /// Background color of hovered rows in grid
 /// @group grid
 $kendo-grid-hover-bg: $kendo-table-hover-bg !default;
@@ -187,6 +192,21 @@ $kendo-grid-hover-text: $kendo-table-hover-text !default;
 /// Border color of hovered rows in grid
 /// @group grid
 $kendo-grid-hover-border: $kendo-table-hover-border !default;
+
+
+/// Background color of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-bg: $kendo-table-focus-bg !default;
+/// Text color of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-text: $kendo-table-focus-text !default;
+/// Border color of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-border: $kendo-table-focus-border !default;
+/// Box shadow of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-shadow: $kendo-table-focus-shadow !default;
+
 
 /// Background color of selected rows in grid
 /// @group grid
@@ -198,6 +218,29 @@ $kendo-grid-selected-text: $kendo-table-selected-text !default;
 /// @group grid
 $kendo-grid-selected-border: $kendo-table-selected-border !default;
 
+
+/// Background color of selected alternating rows in grid.
+/// @group grid
+$kendo-grid-alt-selected-bg: k-try-shade( $kendo-grid-selected-bg, .5 ) !default;
+/// Text color of selected alternating rows in grid.
+/// @group grid
+$kendo-grid-alt-selected-text: $kendo-grid-selected-text !default;
+/// Border color of selected alternating rows in grid.
+/// @group grid
+$kendo-grid-alt-selected-border: $kendo-grid-selected-border !default;
+
+
+/// Background color of hovered and selected rows in grid
+/// @group grid
+$kendo-grid-selected-hover-bg: k-try-shade( $kendo-grid-selected-bg, 1 ) !default;
+/// Text color of hovered and selected rows in grid
+/// @group grid
+$kendo-grid-selected-hover-text: $kendo-grid-selected-text !default;
+/// Border color of hovered and selected rows in grid
+/// @group grid
+$kendo-grid-selected-hover-border: $kendo-grid-selected-border !default;
+
+
 $kendo-grid-sorted-icon-spacing: calc( #{$kendo-padding-md-x} - 1px ) !default;
 $kendo-grid-sorted-bg: rgba( k-contrast-color( $kendo-grid-bg ), .02 ) !default;
 $kendo-grid-sorting-indicator-text: $kendo-color-primary !default;
@@ -208,8 +251,6 @@ $kendo-grid-sorting-index-spacing-x: -$kendo-grid-sorting-index-spacing-y !defau
 
 $kendo-grid-grouping-row-bg: k-try-shade( $kendo-grid-bg, 1 ) !default;
 $kendo-grid-grouping-row-text: $kendo-grid-text !default;
-
-$kendo-grid-focus-shadow: $kendo-table-focus-shadow !default;
 
 $kendo-grid-command-cell-button-spacing: k-map-get( $kendo-spacing, 2 ) !default;
 // be cautious when changing the next line; see https://github.com/MoOx/reduce-css-calc/issues/38
