--- a/packages/default/scss/grid/_variables.scss
+++ b/packages/default/scss/grid/_variables.scss
@@ -138,6 +138,7 @@ $kendo-grid-text: $kendo-table-text !default;
 /// @group grid
 $kendo-grid-border: $kendo-table-border !default;
 
+
 /// Background color of grid header
 /// @group grid
 $kendo-grid-header-bg: $kendo-table-header-bg !default;
@@ -151,6 +152,7 @@ $kendo-grid-header-border: $kendo-table-header-border !default;
 /// @group grid
 $kendo-grid-header-gradient: $kendo-table-header-gradient !default;
 
+
 /// Background color of grid footer
 /// @group grid
 $kendo-grid-footer-bg: $kendo-grid-header-bg !default;
@@ -160,6 +162,7 @@ $kendo-grid-footer-text: $kendo-grid-header-text !default;
 /// Border color of grid footer
 /// @group grid
 $kendo-grid-footer-border: $kendo-grid-header-border !default;
+
 
 /// Background color of alternating rows in grid
 /// @group grid
@@ -171,6 +174,7 @@ $kendo-grid-alt-text: $kendo-table-alt-row-text !default;
 /// @group grid
 $kendo-grid-alt-border: $kendo-table-alt-row-border !default;
 
+
 /// Background color of hovered rows in grid
 /// @group grid
 $kendo-grid-hover-bg: $kendo-table-hover-bg !default;
@@ -181,6 +185,21 @@ $kendo-grid-hover-text: $kendo-table-hover-text !default;
 /// @group grid
 $kendo-grid-hover-border: $kendo-table-hover-border !default;
 
+
+/// Background color of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-bg: $kendo-table-focus-bg !default;
+/// Text color of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-text: $kendo-table-focus-text !default;
+/// Border color of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-border: $kendo-table-focus-border !default;
+/// Box shadow of focused rows in grid.
+/// @group grid
+$kendo-grid-focus-shadow: $kendo-table-focus-shadow !default;
+
+
 /// Background color of selected rows in grid
 /// @group grid
 $kendo-grid-selected-bg: $kendo-table-selected-bg !default;
@@ -190,6 +209,29 @@ $kendo-grid-selected-text: $kendo-table-selected-text !default;
 /// Border color of selected rows in grid
 /// @group grid
 $kendo-grid-selected-border: $kendo-table-selected-border !default;
+
+
+/// Background color of selected alternating rows in grid.
+/// @group grid
+$kendo-grid-alt-selected-bg: k-try-shade( $kendo-grid-selected-bg, .5 ) !default;
+/// Text color of selected alternating rows in grid.
+/// @group grid
+$kendo-grid-alt-selected-text: $kendo-grid-selected-text !default;
+/// Border color of selected alternating rows in grid.
+/// @group grid
+$kendo-grid-alt-selected-border: $kendo-grid-selected-border !default;
+
+
+/// Background color of hovered and selected rows in grid
+/// @group grid
+$kendo-grid-selected-hover-bg: k-try-shade( $kendo-grid-selected-bg, 1 ) !default;
+/// Text color of hovered and selected rows in grid
+/// @group grid
+$kendo-grid-selected-hover-text: $kendo-grid-selected-text !default;
+/// Border color of hovered and selected rows in grid
+/// @group grid
+$kendo-grid-selected-hover-border: $kendo-grid-selected-border !default;
+
 
 $kendo-grid-grouping-row-bg: $kendo-base-bg !default;
 $kendo-grid-grouping-row-text: $kendo-grid-text !default;
