--- a/packages/material/scss/table/_variables.scss
+++ b/packages/material/scss/table/_variables.scss
@@ -78,7 +78,7 @@ $kendo-table-border: $kendo-component-border !default;
 $kendo-table-header-bg: $kendo-table-bg !default;
 /// Text color of table headers.
 /// @group table
-$kendo-table-header-text: if( $kendo-is-dark-theme, $light-secondary-text, $dark-secondary-text ) !default;
+$kendo-table-header-text: $kendo-table-text !default;
 /// Border color of table headers.
 /// @group table
 $kendo-table-header-border: $kendo-table-border !default;
@@ -111,7 +111,7 @@ $kendo-table-group-row-border: $kendo-table-header-border !default;
 
 /// Background color of alternating rows in table.
 /// @group table
-$kendo-table-alt-row-bg: transparent !default;
+$kendo-table-alt-row-bg: null !default;
 /// Text color of alternating rows in table.
 /// @group table
 $kendo-table-alt-row-text: null !default;
@@ -122,10 +122,10 @@ $kendo-table-alt-row-border: null !default;
 
 /// Background color of hovered rows in table.
 /// @group table
-$kendo-table-hover-bg: rgba( k-contrast-color( $kendo-table-bg ), .07 ) !default;
+$kendo-table-hover-bg: k-try-shade( $kendo-table-bg, .5 ) !default;
 /// Text color of hovered rows in table.
 /// @group table
-$kendo-table-hover-text: null !default;
+$kendo-table-hover-text: $kendo-table-text !default;
 /// Border color of hovered rows in table.
 /// @group table
 $kendo-table-hover-border: $kendo-table-border !default;
@@ -133,10 +133,10 @@ $kendo-table-hover-border: $kendo-table-border !default;
 
 /// Background color of focused rows in table.
 /// @group table
-$kendo-table-focus-bg: null !default;
+$kendo-table-focus-bg: k-try-shade( $kendo-table-bg, 1 ) !default;
 /// Text color of focused rows in table.
 /// @group table
-$kendo-table-focus-text: null !default;
+$kendo-table-focus-text: $kendo-table-text !default;
 /// Border color of focused rows in table.
 /// @group table
 $kendo-table-focus-border: null !default;
@@ -147,10 +147,32 @@ $kendo-table-focus-shadow: $kendo-list-item-focus-shadow !default;
 
 /// Background color of selected rows in table.
 /// @group table
-$kendo-table-selected-bg: rgba( k-contrast-color( $kendo-table-bg ), .04 ) !default;
+$kendo-table-selected-bg: k-rgba-to-mix( rgba( $kendo-selected-bg, .04 ), $kendo-table-bg ) !default;
 /// Text color of selected rows in table.
 /// @group table
-$kendo-table-selected-text: null !default;
+$kendo-table-selected-text: $kendo-table-text !default;
 /// Border color of selected rows in table.
 /// @group table
 $kendo-table-selected-border: null !default;
+
+
+/// Background color of selected alternating rows in table.
+/// @group table
+$kendo-table-alt-selected-bg: null !default;
+/// Text color of selected alternating rows in table.
+/// @group table
+$kendo-table-alt-selected-text: null !default;
+/// Border color of selected alternating rows in table.
+/// @group table
+$kendo-table-alt-selected-border: null !default;
+
+
+/// Background color of hovered and selected rows in table.
+/// @group table
+$kendo-table-selected-hover-bg: k-rgba-to-mix( rgba( $kendo-selected-bg, .08 ), $kendo-table-bg ) !default;
+/// Text color of hovered and selected rows in table.
+/// @group table
+$kendo-table-selected-hover-text: $kendo-table-text !default;
+/// Border color of hovered and selected rows in table.
+/// @group table
+$kendo-table-selected-hover-border: null !default;
